gitops/apps/environments/production/pgadmin/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-networking-httproutes
  annotations:
    argocd.argoproj.io/sync-wave: "-1"

spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: networking

  to:
    - group: ""
      kind: Service
      name: pgadmin
